--- a/WinFormsApp1/WinFormsApp1/Form2.uk.resx
+++ b/WinFormsApp1/WinFormsApp1/Form2.uk.resx
@@ -117,4 +117,26 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="label1.Size" type="System.Drawing.Size, System.Drawing">
+    <value>50, 20</value>
+  </data>
+  <data name="label1.Text" xml:space="preserve">
+    <value>Логін:</value>
+  </data>
+  <data name="label2.Location" type="System.Drawing.Point, System.Drawing">
+    <value>26, 79</value>
+  </data>
+  <data name="label2.Size" type="System.Drawing.Size, System.Drawing">
+    <value>65, 20</value>
+  </data>
+  <data name="label2.Text" xml:space="preserve">
+    <value>Пароль:</value>
+  </data>
+  <data name="button1.Text" xml:space="preserve">
+    <value>OК</value>
+  </data>
+  <data name="button2.Text" xml:space="preserve">
+    <value>Скасувати</value>
+  </data>
 </root>
